made changes to html to make it more accessible

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <a href="#" class="logo"><img src="images/Logo.PNG" alt="AreoStep logo links to home page"></a>
 
     <ul class="Navmenu">
-      <li><a onclick="window.location.href='index.html';">Home</a></li>
-      <li><a onclick="window.location.href='shop.html';">Shop</a></li>
-      <li><a href="#About-AreoStep">About</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="shop.html">Shop</a></li>
+      <li><a href="index.html#About-AreoStep">About</a></li>
       <li><a href="#contact-us">Contact</a></li>
     </ul>
 
@@ -68,7 +68,7 @@
 
         <div class="product-item" onclick="window.location.href='sproduct.html?id=nike-shox-z';"> 
             <div class="row">
-                <img src="images/Nike shoes/W+NIKE+SHOX+Z-1.png" alt="Maroon niike shoe"> 
+                <img src="images/Nike shoes/W+NIKE+SHOX+Z-1.png" alt="Maroon nike-shox-z women's shoe"> 
                 <h6 class="category-tag">Women's shoes</h6>
             </div>
                 <div class="product-actions">
@@ -90,7 +90,7 @@
         </div>
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=xlg-mtw-shoes';"> 
             <div class="row">
-                <img src="images/Addidas shoes/XLG_MTW_Shoes_Grey_JS1501_01_00_standard.jpg" alt="grey xlg mtw Addidas shoe"> 
+                <img src="images/Addidas shoes/XLG_MTW_Shoes_Grey_JS1501_01_00_standard.jpg" alt="grey xlg mtw Addidas unisex shoe"> 
                 <h6 class="category-tag">unisex shoes</h6>
             </div>
                 <div class="product-actions">
@@ -112,7 +112,7 @@
         </div> 
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=anthony-edwards-1';"> 
             <div class="row">
-                <img src="images/Addidas shoes/Anthony_Edwards_1_Low_Trainers_White_JQ6140_01_00_standard.jpg" alt="black and white anthony-edwards-1 x Addidas shoe"> 
+                <img src="images/Addidas shoes/Anthony_Edwards_1_Low_Trainers_White_JQ6140_01_00_standard.jpg" alt="black and white anthony-edwards-1 x Addidas Basketball shoe"> 
                 <h6 class="category-tag">Basketball shoes</h6>
             </div>
                 <div class="product-actions">
@@ -134,7 +134,7 @@
         </div> 
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=nike-jordan-1';"> 
             <div class="row">
-                <img src="images/Nike shoes/nike retro high Jordan .png" alt="blue nike air Jordan shoe"> 
+                <img src="images/Nike shoes/nike retro high Jordan .png" alt="blue nike air Jordan kid's shoe"> 
                 <h6 class="category-tag">kids's shoes</h6>
             </div>
                 <div class="product-actions">
@@ -164,7 +164,7 @@
     <div class="products">
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=deviate-nitro';"> 
             <div class="row">
-                <img src="images/Puma shoes/Deviate-NITRO™-Elite-3-Running-Shoes-Women.jpg" alt="bright orange deviate-nitro puma shoe"> 
+                <img src="images/Puma shoes/Deviate-NITRO™-Elite-3-Running-Shoes-Women.jpg" alt="bright orange deviate-nitro puma running shoe"> 
                 <h6 class="category-tag">Running shoes</h6>
             </div>
                 <div class="product-actions">
@@ -186,7 +186,7 @@
         </div>
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=campus-00s';"> 
             <div class="row">
-                <img src="images/Addidas shoes/Campus_00s_Shoes_Green_H03472_01_standard.jpg" alt="dark green Addidas campus-00s shoe"> 
+                <img src="images/Addidas shoes/Campus_00s_Shoes_Green_H03472_01_standard.jpg" alt="dark green Addidas campus-00s unisex shoe"> 
                 <h6 class="category-tag">unisex shoes</h6>
             </div>
                 <div class="product-actions">
@@ -208,7 +208,7 @@
         </div> 
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=vomero-premium';"> 
             <div class="row">
-                <img src="images/Nike shoes/NIKE+VOMERO+PREMIUM.png" alt="light green nike vomero-premium shoe"> 
+                <img src="images/Nike shoes/NIKE+VOMERO+PREMIUM.png" alt="light green nike vomero-premium unisex shoe"> 
                 <h6 class="category-tag">unisex shoes</h6>
             </div>
                 <div class="product-actions">
@@ -230,7 +230,7 @@
         </div> 
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=palermo-sneakers';"> 
             <div class="row">
-                <img src="images/Puma shoes/Palermo-Sneakers-Unisex.jpg" alt="light yellow and blue puma palermo-sneakers"> 
+                <img src="images/Puma shoes/Palermo-Sneakers-Unisex.jpg" alt="light yellow and blue puma palermo-sneakers unisex"> 
                 <h6 class="category-tag">unisex shoes</h6>
             </div>
                 <div class="product-actions">
@@ -299,31 +299,23 @@
 
       <div class="thrid-info">
         <h4>Shop</h4>
-        <p>Men's shopping</p>
-        <p>Women's Shopping</p>
-        <p>kids's Shopping </p>
-        <p>Furniture</p>
-        <p>Discount</p>
+        <ul>
+          <li>Men's shopping</li>
+          <li>women's shopping</li>
+          <li>kid's shopping</li>
+          <li>Discount</li>
+        </ul>
       </div>
 
       <div class="forth-info">
         <h4>Company</h4>
-        <p>About</p>
-        <p>Blog</p>
-        <p>Affiliate</p>
-        <p>Login</p>
+        <ul>
+          <li>About</li>
+          <li>Blog</li>
+          <li>Affiliate</li> 
+          <li>Login</li>
+        </ul>
       </div>
-
-      <div class="five-info">
-        <h4>Subscribe</h4>
-        <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqu</p>
-        <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqu</p>
-        <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqu</p>
-      </div>
-    </div>
-  </section>
-  
-
   <div class="end-text">
     <p>Copyright ©2025 All Rights Reserved Designed By Ayra Baig</p>
   </div>
