--- a/shop.html
+++ b/shop.html
@@ -20,9 +20,9 @@
     <a onclick="window.location.href='index.html';" class="logo"><img src="images/Logo.PNG" alt="AreoStep logo"></a>
 
     <ul class="Navmenu">
-      <li><a onclick="window.location.href='index.html';">Home</a></li>
-      <li><a onclick="window.location.href='shop.html';">Shop</a></li>
-      <li><a onclick="window.location.href='index.html#About-AreoStep';">About</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="shop.html">Shop</a></li>
+      <li><a href="index.html#About-AreoStep">About</a></li>
       <li><a href="#contact-us">Contact</a></li>
     </ul>
 
@@ -64,7 +64,7 @@
 
         <div class="product-item" onclick="window.location.href='sproduct.html?id=nike-shox-z';"> 
             <div class="row">
-                <img src="images/Nike shoes/W+NIKE+SHOX+Z-1.png" alt="maroon nike shox z shoe"> 
+                <img src="images/Nike shoes/W+NIKE+SHOX+Z-1.png" alt="maroon nike shox z women's shoe"> 
                 <h6 class="category-tag">Women's shoes</h6>
             </div>
                 <div class="product-actions">
@@ -86,7 +86,7 @@
         </div> 
         <div class="product-item" onclick="window.location.href='sproduct.html?id=xlg-mtw-shoes';"> 
             <div class="row">
-                <img src="images/Addidas shoes/XLG_MTW_Shoes_Grey_JS1501_01_00_standard.jpg" alt="grey Addidas xlg mtw shoes"> 
+                <img src="images/Addidas shoes/XLG_MTW_Shoes_Grey_JS1501_01_00_standard.jpg" alt="grey Addidas xlg mtw unisex shoes"> 
                 <h6 class="category-tag">unisex shoes</h6>
             </div>
                 <div class="product-actions">
@@ -108,7 +108,7 @@
         </div> 
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=anthony-edwards-1';"> 
             <div class="row">
-                <img src="images/Addidas shoes/Anthony_Edwards_1_Low_Trainers_White_JQ6140_01_00_standard.jpg" alt="black and white Addidas anthony-edwards-1 shoe"> 
+                <img src="images/Addidas shoes/Anthony_Edwards_1_Low_Trainers_White_JQ6140_01_00_standard.jpg" alt="black and white Addidas anthony-edwards-1 Basketball shoe"> 
                 <h6 class="category-tag">Basketball shoes</h6>
             </div>
                 <div class="product-actions">
@@ -130,7 +130,7 @@
         </div> 
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=nike-jordan-1';"> 
             <div class="row">
-                <img src="images/Nike shoes/nike retro high Jordan .png" alt="blue nike air jordan shoe"> 
+                <img src="images/Nike shoes/nike retro high Jordan .png" alt="blue nike air jordan kid's shoe"> 
                 <h6 class="category-tag">kids's shoes</h6>
             </div>
                 <div class="product-actions">
@@ -152,7 +152,7 @@
         </div>
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=deviate-nitro';"> 
             <div class="row">
-                <img src="images/Puma shoes/Deviate-NITRO™-Elite-3-Running-Shoes-Women.jpg" alt="orange puma deviate-nitro shoe"> 
+                <img src="images/Puma shoes/Deviate-NITRO™-Elite-3-Running-Shoes-Women.jpg" alt="orange puma deviate-nitro running shoe"> 
                 <h6 class="category-tag">Running shoes</h6>
             </div>
                 <div class="product-actions">
@@ -174,7 +174,7 @@
         </div>
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=campus-00s';"> 
             <div class="row">
-                <img src="images/Addidas shoes/Campus_00s_Shoes_Green_H03472_01_standard.jpg" alt="dark green Addidas campus-00s shoe"> 
+                <img src="images/Addidas shoes/Campus_00s_Shoes_Green_H03472_01_standard.jpg" alt="dark green Addidas campus-00s unisex shoe"> 
                 <h6 class="category-tag">unisex shoes</h6>
             </div>
                 <div class="product-actions">
@@ -196,7 +196,7 @@
         </div> 
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=vomero-premium';"> 
             <div class="row">
-                <img src="images/Nike shoes/NIKE+VOMERO+PREMIUM.png" alt="light green nike vomero-premium shoe"> 
+                <img src="images/Nike shoes/NIKE+VOMERO+PREMIUM.png" alt="light green nike vomero-premium unisex shoe"> 
                 <h6 class="category-tag">unisex shoes</h6>
             </div>
                 <div class="product-actions">
@@ -218,7 +218,7 @@
         </div> 
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=palermo-sneakers';"> 
             <div class="row">
-                <img src="images/Puma shoes/Palermo-Sneakers-Unisex.jpg" alt="light yellow and blue puma palermo-sneakers"> 
+                <img src="images/Puma shoes/Palermo-Sneakers-Unisex.jpg" alt="light yellow and blue puma unisex palermo-sneakers"> 
                 <h6 class="category-tag">unisex shoes</h6>
             </div>
                 <div class="product-actions">
@@ -240,7 +240,7 @@
         </div> 
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=fuelcell-rebel-v5';"> 
             <div class="row">
-                <img src="images/New Balence/mfcxlv5_nb_02_i.jpg" alt="cream and coral new Balence fuelcell-rebel-v5"> 
+                <img src="images/New Balence/mfcxlv5_nb_02_i.jpg" alt="cream and coral new Balence fuelcell-rebel-v5 men's shoe"> 
                 <h6 class="category-tag">Men's shoes</h6>
             </div>
                 <div class="product-actions">
@@ -262,7 +262,7 @@
         </div>
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=predator-megaride';"> 
             <div class="row">
-                <img src="images/Addidas shoes/Predator_Megaride_Shoes_Grey_JS1555_01_00_standard.jpg" alt="sliver Addidas predator-megaride shoes"> 
+                <img src="images/Addidas shoes/Predator_Megaride_Shoes_Grey_JS1555_01_00_standard.jpg" alt="sliver Addidas predator-megaride unisex shoes"> 
                 <h6 class="category-tag">unisex shoes</h6>
             </div>
                 <div class="product-actions">
@@ -284,7 +284,7 @@
         </div> 
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=monstro-og';"> 
             <div class="row">
-                <img src="images/Puma shoes/jd_764659_a.jpg" alt="yellow and black puma monstro-og"> 
+                <img src="images/Puma shoes/jd_764659_a.jpg" alt="yellow and black puma monstro-og Men's show"> 
                 <h6 class="category-tag">Men's shoes</h6>
             </div>
                 <div class="product-actions">
@@ -306,7 +306,7 @@
         </div> 
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=abzorb-2000';"> 
             <div class="row">
-                <img src="images/New Balence/u2000pbc_nb_02_i.jpg" alt="light pink new Balence abzorb-2000"> 
+                <img src="images/New Balence/u2000pbc_nb_02_i.jpg" alt="light pink new Balence abzorb-2000 women's shoe"> 
                 <h6 class="category-tag">women's shoes</h6>
             </div>
                 <div class="product-actions">
@@ -328,7 +328,7 @@
         </div>
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=nike-shox-r4';"> 
             <div class="row">
-                <img src="images/Nike shoes/NIKE+SHOX+R4+(GS).jpg" alt="black and orange nike-shox-r4 shoe"> 
+                <img src="images/Nike shoes/NIKE+SHOX+R4+(GS).jpg" alt="black and orange nike-shox-r4 older kid's shoe"> 
                 <h6 class="category-tag">older kid's shoes</h6>
             </div>
                 <div class="product-actions">
@@ -350,7 +350,7 @@
         </div>
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=asap-rocky-inhale';"> 
             <div class="row">
-                <img src="images/Puma shoes/jd_768455_a.jpg" alt="grey, orange and black puma asap-rocky-inhale shoe "> 
+                <img src="images/Puma shoes/jd_768455_a.jpg" alt="grey, orange and black puma asap-rocky-inhale unisex shoe "> 
                 <h6 class="category-tag">unisex shoes</h6>
             </div>
                 <div class="product-actions">
@@ -372,7 +372,7 @@
         </div> 
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=hoka-bondai-i';"> 
             <div class="row">
-                <img src="images/New Balence/jd_765107_a.jpg" alt="cream and mint green hoka-bondai-i"> 
+                <img src="images/New Balence/jd_765107_a.jpg" alt="cream and mint green hoka-bondai-i women's shoe"> 
                 <h6 class="category-tag">Women's shoes</h6>
             </div>
                 <div class="product-actions">
@@ -394,7 +394,7 @@
         </div> 
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=nike-hyperboot';"> 
             <div class="row">
-                <img src="images/Nike shoes/HYPERBOOT+BY+NIKE+X+HYPERICE.jpg" alt="black and white nike-hyperboot"> 
+                <img src="images/Nike shoes/HYPERBOOT+BY+NIKE+X+HYPERICE.jpg" alt="black and white nike-hyperboot unisex shoe"> 
                 <h6 class="category-tag">unisex shoes</h6>
             </div>
                 <div class="product-actions">
@@ -416,7 +416,7 @@
         </div> 
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=530';"> 
             <div class="row">
-                <img src="images/New Balence/mr530snc_nb_02_i.jpg" alt="brown and cream new Balence 530"> 
+                <img src="images/New Balence/mr530snc_nb_02_i.jpg" alt="brown and cream new Balence 530 men's shoe"> 
                 <h6 class="category-tag">Men's shoes</h6>
             </div>
                 <div class="product-actions">
@@ -438,7 +438,7 @@
         </div>
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=nora';"> 
             <div class="row">
-                <img src="images/Addidas shoes/Nora_Purple_JP8586_01_00_standard.jpg" alt="purple and blue Addidas nora shoes"> 
+                <img src="images/Addidas shoes/Nora_Purple_JP8586_01_00_standard.jpg" alt="purple and blue Addidas nora skateboarding shoes"> 
                 <h6 class="category-tag">skateboarding shoes</h6>
             </div>
                 <div class="product-actions">
@@ -460,7 +460,7 @@
         </div> 
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=caven-ii-infant';"> 
             <div class="row">
-                <img src="images/Puma shoes/jd_766897_a.jpg" alt="white puma caven-ii-infant"> 
+                <img src="images/Puma shoes/jd_766897_a.jpg" alt="white puma caven-ii-infant kid's shoe"> 
                 <h6 class="category-tag">Kid's shoes</h6>
             </div>
                 <div class="product-actions">
@@ -482,7 +482,7 @@
         </div> 
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=taekwondo-f50';"> 
             <div class="row">
-                <img src="images/Addidas shoes/Taekwondo_F50_Shoes_Blue_JS1046_01_00_standard.jpg" alt="dark blue Addidas taekwondo-f50 shoe"> 
+                <img src="images/Addidas shoes/Taekwondo_F50_Shoes_Blue_JS1046_01_00_standard.jpg" alt="dark blue Addidas taekwondo-f50 men's shoe"> 
                 <h6 class="category-tag">men's shoes</h6>
             </div>
                 <div class="product-actions">
@@ -504,7 +504,7 @@
         </div>
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=fresh-foam-kaiha';"> 
             <div class="row">
-                <img src="images/New Balence/wkaircv1_nb_02_i.jpg" alt="light purple new Balence fresh-foam-kaiha"> 
+                <img src="images/New Balence/wkaircv1_nb_02_i.jpg" alt="light purple new Balence fresh-foam-kaiha running shoe"> 
                 <h6 class="category-tag">Running shoes</h6>
             </div>
                 <div class="product-actions">
@@ -526,7 +526,7 @@
         </div>
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=superstar-ii';"> 
             <div class="row">
-                <img src="images/Addidas shoes/Superstar_II_Shoes_Black_JP8164_01_00_standard.jpg" alt="black and cream cow print Addidas superstar-ii"> 
+                <img src="images/Addidas shoes/Superstar_II_Shoes_Black_JP8164_01_00_standard.jpg" alt="black and cream cow print Addidas superstar-ii men's shoe"> 
                 <h6 class="category-tag">Men's shoes</h6>
             </div>
                 <div class="product-actions">
@@ -548,7 +548,7 @@
         </div> 
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=speecat-pony';"> 
             <div class="row">
-                <img src="images/Addidas shoes/jd_773592_a.jpg" alt="brown and cream horse pattern Addidas speecat-pony"> 
+                <img src="images/Addidas shoes/jd_773592_a.jpg" alt="brown and cream horse pattern Addidas speecat-pony women's shoe"> 
                 <h6 class="category-tag">Women's shoes</h6>
             </div>
                 <div class="product-actions">
@@ -570,7 +570,7 @@
         </div> 
         <div class="product-item"  onclick="window.location.href='sproduct.html?id=nike-air-max-dn';"> 
             <div class="row">
-                <img src="images/Nike shoes/AIR+MAX+DN+(GS).jpg" alt="white and light green nike-air-max-dn shoes"> 
+                <img src="images/Nike shoes/AIR+MAX+DN+(GS).jpg" alt="white and light green nike-air-max-dn shoes older kid's shoe"> 
                 <h6 class="category-tag">older kid's shoes</h6>
             </div>
                 <div class="product-actions">
@@ -640,28 +640,23 @@
 
       <div class="thrid-info">
         <h4>Shop</h4>
-        <p>Men's shopping</p>
-        <p>Women's Shopping</p>
-        <p>kids's Shopping </p>
-        <p>Furniture</p>
-        <p>Discount</p>
+        <ul>
+          <li>Men's shopping</li>
+          <li>women's shopping</li>
+          <li>kid's shopping</li>
+          <li>Discount</li>
+        </ul>
       </div>
 
       <div class="forth-info">
         <h4>Company</h4>
-        <p>About</p>
-        <p>Blog</p>
-        <p>Affiliate</p>
-        <p>Login</p>
+        <ul>
+          <li>About</li>
+          <li>Blog</li>
+          <li>Affiliate</li> 
+          <li>Login</li>
+        </ul>
       </div>
-
-      <div class="five-info">
-        <h4>Subscribe</h4>
-        <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqu</p>
-        <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqu</p>
-        <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqu</p>
-      </div>
-    </div>
   </section>
   
 
