--- a/sign-in.html
+++ b/sign-in.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
-    <title>AreoStep | Ecommerce </title>
+    <title>AreoStep | sign-in </title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
@@ -21,9 +21,9 @@
     <a href="index.html" class="logo"><img src="images/Logo.PNG" alt="AreoStep logo links to home page"></a>
 
     <ul class="Navmenu">
-      <li><a onclick="window.location.href='index.html';">Home</a></li>
-      <li><a onclick="window.location.href='shop.html';">Shop</a></li>
-      <li><a onclick="window.location.href='index.html#About-AreoStep';">About</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="shop.html">Shop</a></li>
+      <li><a href="index.html#About-AreoStep">About</a></li>
       <li><a href="#contact-us">Contact</a></li>
     </ul>
 
@@ -107,28 +107,23 @@
 
       <div class="thrid-info">
         <h4>Shop</h4>
-        <p>Men's shopping</p>
-        <p>Women's Shopping</p>
-        <p>kids's Shopping </p>
-        <p>Furniture</p>
-        <p>Discount</p>
+        <ul>
+          <li>Men's shopping</li>
+          <li>women's shopping</li>
+          <li>kid's shopping</li>
+          <li>Discount</li>
+        </ul>
       </div>
 
       <div class="forth-info">
         <h4>Company</h4>
-        <p>About</p>
-        <p>Blog</p>
-        <p>Affiliate</p>
-        <p>Login</p>
+        <ul>
+          <li>About</li>
+          <li>Blog</li>
+          <li>Affiliate</li> 
+          <li>Login</li>
+        </ul>
       </div>
-
-      <div class="five-info">
-        <h4>Subscribe</h4>
-        <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqu</p>
-        <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqu</p>
-        <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqu</p>
-      </div>
-    </div>
   </section>
   
 
