--- a/sproduct2.html
+++ b/sproduct2.html
@@ -20,9 +20,9 @@
     <a onclick="window.location.href='index.html';" class="logo"><img src="images/Logo.PNG" alt="AreoStep logo"></a>
 
     <ul class="Navmenu">
-      <li><a onclick="window.location.href='index.html';">Home</a></li>
-      <li><a onclick="window.location.href='shop.html';">Shop</a></li>
-      <li><a onclick="window.location.href='index.html#About-AreoStep';">About</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="shop.html">Shop</a></li>
+      <li><a href="index.html#About-AreoStep">About</a></li>
       <li><a href="#contact-us">Contact</a></li>
     </ul>
 
@@ -100,7 +100,7 @@
 
       <div class="product-item"   onclick="window.location.href='sproduct.html?id=vomero-premium';"> 
         <div class="row">
-            <img src="images/Nike shoes/NIKE+VOMERO+PREMIUM.png" alt="light green nike vomero-premium shoes"> 
+            <img src="images/Nike shoes/NIKE+VOMERO+PREMIUM.png" alt="light green nike vomero-premium  unisex shoe"> 
             <h6 class="category-tag">Unisex shoes</h6>
         </div>
             <div class="product-actions">
@@ -122,7 +122,7 @@
     </div>
     <div class="product-item"  onclick="window.location.href='sproduct.html?id=abzorb-2000';"> 
         <div class="row">
-            <img src="images/New Balence/u2000pbc_nb_02_i.jpg" alt="light pink new Balence abzorb-2000 shoes"> 
+            <img src="images/New Balence/u2000pbc_nb_02_i.jpg" alt="light pink new Balence abzorb-2000 women's shoes"> 
             <h6 class="category-tag">women's shoes</h6>
         </div>
             <div class="product-actions">
@@ -144,7 +144,7 @@
     </div> 
     <div class="product-item"  onclick="window.location.href='sproduct.html?id=superstar-ii';"> 
         <div class="row">
-            <img src="images/Addidas shoes/Superstar_II_Shoes_Black_JP8164_01_00_standard.jpg" alt="black and cream cow print Addidas superstar-ii"> 
+            <img src="images/Addidas shoes/Superstar_II_Shoes_Black_JP8164_01_00_standard.jpg" alt="black and cream cow print Addidas superstar-ii men's shoe"> 
             <h6 class="category-tag">Men's shoes</h6>
         </div>
             <div class="product-actions">
@@ -166,7 +166,7 @@
     </div> 
     <div class="product-item"  onclick="window.location.href='sproduct.html?id=predator-megaride';"> 
         <div class="row">
-            <img src="images/Addidas shoes/Predator_Megaride_Shoes_Grey_JS1555_01_00_standard.jpg" alt="silver Addidas predator-megaride"> 
+            <img src="images/Addidas shoes/Predator_Megaride_Shoes_Grey_JS1555_01_00_standard.jpg" alt="silver Addidas predator-megaride men's shoe"> 
             <h6 class="category-tag">Men's shoes</h6>
         </div>
             <div class="product-actions">
@@ -204,7 +204,7 @@
         </div>
       </div>
 
-      <div class="second-info">
+            <div class="second-info">
         <h4>support</h4>
         <p>Contact us</p>
         <p>About Page</p>
@@ -215,28 +215,23 @@
 
       <div class="thrid-info">
         <h4>Shop</h4>
-        <p>Men's shopping</p>
-        <p>Women's Shopping</p>
-        <p>kids's Shopping </p>
-        <p>Furniture</p>
-        <p>Discount</p>
+        <ul>
+          <li>Men's shopping</li>
+          <li>women's shopping</li>
+          <li>kid's shopping</li>
+          <li>Discount</li>
+        </ul>
       </div>
 
       <div class="forth-info">
         <h4>Company</h4>
-        <p>About</p>
-        <p>Blog</p>
-        <p>Affiliate</p>
-        <p>Login</p>
+        <ul>
+          <li>About</li>
+          <li>Blog</li>
+          <li>Affiliate</li> 
+          <li>Login</li>
+        </ul>
       </div>
-
-      <div class="five-info">
-        <h4>Subscribe</h4>
-        <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqu</p>
-        <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqu</p>
-        <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqu</p>
-      </div>
-    </div>
   </section>
   
 
