--- a/sproduct.html
+++ b/sproduct.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>AreoStep | Ecommerce </title>
+    <title>AreoStep | product page </title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
@@ -20,9 +20,9 @@
     <a onclick="window.location.href='index.html';" class="logo"><img src="images/Logo.PNG" alt="AreoStep logo"></a>
 
     <ul class="Navmenu">
-      <li><a onclick="window.location.href='index.html';">Home</a></li>
-      <li><a onclick="window.location.href='shop.html';">Shop</a></li>
-      <li><a onclick="window.location.href='index.html#About-AreoStep';">About</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="shop.html">Shop</a></li>
+      <li><a href="index.html#About-AreoStep">About</a></li>
       <li><a href="#contact-us">Contact</a></li>
     </ul>
 
@@ -100,7 +100,7 @@
 
       <div class="product-item"  onclick="window.location.href='sproduct2.html?id=league-jb-fold';"> 
         <div class="row">
-            <img src="images/Addidas shoes/Untitled design.png" alt="#"> 
+            <img src="images/Addidas shoes/Untitled design.png" alt="black and blue Addidas league-jb-fold kid's football shoes"> 
             <h6 class="category-tag">kid's football shoes</h6>
         </div>
             <div class="product-actions">
@@ -122,7 +122,7 @@
     </div>
     <div class="product-item"  onclick="window.location.href='sproduct2.html?id=fenty-puma-avanti';"> 
         <div class="row">
-            <img src="images/Puma shoes/Untitled design.png" alt="#"> 
+            <img src="images/Puma shoes/Untitled design.png" alt="silver and blue Fenty x PUMA Avanti LS-X women's Sneakers"> 
             <h6 class="category-tag">women's shoes</h6>
         </div>
             <div class="product-actions">
@@ -144,7 +144,7 @@
     </div> 
     <div class="product-item"  onclick="window.location.href='sproduct2.html?id=air-max-muse';"> 
         <div class="row">
-            <img src="images/Nike shoes/Untitled design 8.47.57 PM.png" alt="#"> 
+            <img src="images/Nike shoes/Untitled design 8.47.57 PM.png" alt="pink and red Nike Air Max Muse x ballerina shoes"> 
             <h6 class="category-tag">Women's shoes</h6>
         </div>
             <div class="product-actions">
@@ -166,7 +166,7 @@
     </div> 
     <div class="product-item"  onclick="window.location.href='sproduct2.html?id=uk-allerdale';"> 
         <div class="row">
-            <img src="images/New Balence/Untitled design.png" alt="#"> 
+            <img src="images/New Balence/Untitled design.png" alt="brown new Balence uk-allerdale men's shoe"> 
             <h6 class="category-tag">Men's shoes</h6>
         </div>
             <div class="product-actions">
@@ -215,28 +215,23 @@
 
       <div class="thrid-info">
         <h4>Shop</h4>
-        <p>Men's shopping</p>
-        <p>Women's Shopping</p>
-        <p>kids's Shopping </p>
-        <p>Furniture</p>
-        <p>Discount</p>
+        <ul>
+          <li>Men's shopping</li>
+          <li>women's shopping</li>
+          <li>kid's shopping</li>
+          <li>Discount</li>
+        </ul>
       </div>
 
       <div class="forth-info">
         <h4>Company</h4>
-        <p>About</p>
-        <p>Blog</p>
-        <p>Affiliate</p>
-        <p>Login</p>
+        <ul>
+          <li>About</li>
+          <li>Blog</li>
+          <li>Affiliate</li> 
+          <li>Login</li>
+        </ul>
       </div>
-
-      <div class="five-info">
-        <h4>Subscribe</h4>
-        <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqu</p>
-        <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqu</p>
-        <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqu</p>
-      </div>
-    </div>
   </section>
   
 
