more changes made to the footer

--- a/sproduct.html
+++ b/sproduct.html
@@ -206,11 +206,13 @@
 
       <div class="second-info">
         <h4>support</h4>
-        <p>Contact us</p>
-        <p>About Page</p>
-        <p>Size Guide</p>
-        <p>Shipping & Returns</p>
-        <p>Privacy</p>
+        <ul>
+        <li>Contact us</li>
+        <li>About Page</li>
+        <li>Size Guide</li>
+        <li>Shipping & Returns</li>
+        <li>Privacy</li>
+        </ul>
       </div>
 
       <div class="thrid-info">
